1. 修改Makefile. 2.增加代码相关注释.

--- a/eatsyscall/Makefile
+++ b/eatsyscall/Makefile
@@ -1,6 +1,11 @@
+progs = eatsyscall
+cleanfiles = *.o *.out
 
 eatsyscall: eatsyscall.o
 	ld -m elf_i386 -o eatsyscall eatsyscall.o
 
 eatsyscall.o: eatsyscall.asm
 	nasm -f elf -g -F stabs eatsyscall.asm
+
+clean:
+	rm -fv ${progs} ${cleanfiles}
